src/objects/Glxy_LeaseProjects__c.object
<CustomObject>
    <fields>
        <fullName>ParkingOnly__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Parking-Only</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PastDueIndicator__c</fullName>
        <description>Definition: 1) Projects with Effective Date Status = Estimate. 2) If effective date is 1st - 15th of month, then project R620 is to be processed in REXUS by 15th of the month or considered past due. 3) If effective date is 16th-31st of the month, project R620 is to be processed by the 15th of the following month, or it is considered past due.</description>
        <formula>IF(
(
    AND(
          (RecordType.DeveloperName = &apos;Rexus&apos;),
          (BDGFlag__c == true),
          (Text(eEorA__c) == &apos;Estimate&apos;),
          (Text(ProjectStatus__c) &lt;&gt; &apos;Cancelled&apos;),
          (
               IF(
                    (DAY(EffectiveDate__c) &lt;= 15 &amp;&amp; 
                    TODAY() &gt; DATE(YEAR(EffectiveDate__c), MONTH(EffectiveDate__c), 15)
                ),
                true, false
               )

              ||

              IF(
                    (DAY(EffectiveDate__c) &gt; 15 &amp;&amp; 
                    TODAY() &gt; DATE(if(MONTH(EffectiveDate__c) == 12 ,YEAR(EffectiveDate__c)+1,YEAR(EffectiveDate__c)), if(MONTH(EffectiveDate__c) == 12 ,1,MONTH(EffectiveDate__c)+1), 15)
                ),
                true, false
               )

          )

       )
)
,
true, false)</formula>
        <label>Past Due Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Past_Due_Bucket_Description__c</fullName>
        <description>Past Due Bucket Description</description>
        <formula>IF(TEXT(Past_Due_Bucket__c) = &apos;Agency - Construction Delay&apos;,&apos;Lease has been awarded.  Agency has changed requirements, or delayed in approving Design Intent Drawings (DIDs) or Construction Drawings (CDs), or failed to provide appropriate funding via RWA or updated OA.&apos;,
IF(TEXT(Past_Due_Bucket__c) = &apos;Agency - Postal Service (USPS) Holdover&apos;,&apos;Protracted negotiations with US Postal Service.&apos;,
IF(TEXT(Past_Due_Bucket__c) = &apos;Agency Post-Occupancy Delay&apos;,&apos;Lease awarded, space completed and accepted.  Agency has not signed updated (final) OA, preventing PBS from processing lease amendment for commencement.&apos;, IF(TEXT(Past_Due_Bucket__c) = &apos;Lessor - Construction Delay&apos;,&apos;Lessor is delayed  in completing DID’s, Construction Drawings, or actual construction.&apos;, 
IF(TEXT(Past_Due_Bucket__c) = &apos;Lessor - Document Delays&apos;,&apos;Lessor has submitted incomplete or incorrect documents, documents with changes, or delayed in signing.&apos;,
IF(TEXT(Past_Due_Bucket__c) = &apos;Lessor - Post-Occupancy Reconciliation&apos;,&apos;Space accepted and occupied.  Reconciliation of T.I. costs, square footage, commencement date, punch list or other terms is underway.&apos;,
IF(TEXT(Past_Due_Bucket__c) = &apos;Lessor - State/City/County or Quasi-Govt Lessor&apos;,&apos;Includes airport authorities.  Protracted negotiations for new, succeeding, extension or expansion lease.  The government’s needs have been identified (location, space, terms, pricing, etc) and lessor has not responded or protracted negotiations are underway.&apos;,
IF(TEXT(Past_Due_Bucket__c) = &apos;PBS - Construction Delay&apos;,&apos;The lessor and agency have completed all necessary steps to keep design &amp; construction phase on schedule.  PBS has not proceeded promptly.&apos;,
IF(TEXT(Past_Due_Bucket__c) = &apos;PBS - Post Occupancy Delay&apos;,&apos;Lease awarded, space completed and accepted.  PBS’s failure or delay in creating or sending accurate final OA to the agency, or accurate final lease commencement amendment to the lessor, or initiating the R620 promptly.&apos;,
IF(TEXT(Past_Due_Bucket__c) = &apos;PBS - Administrative&apos;,&apos;PBS error that does not fall under Construction Delay or Post Occupancy Delay.  An example would be a system or data processing error.&apos;,
IF(TEXT(Past_Due_Bucket__c) = &apos;Agency - Administrative&apos;,&apos;Agency Delay that does not fall under Construction or Post-Occupancy Delay&apos;,
IF(TEXT(Past_Due_Bucket__c) = &apos;Lessor - Administrative&apos;,&apos;Lessor delay that does not fall under any of the other Lessor Delays&apos;,&apos;&apos;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due Bucket Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Due_Bucket__c</fullName>
        <description>Past Due Bucket</description>
        <label>Past Due Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency - Administrative</fullName>
                </value>
                <value>
                    <fullName>Agency - Construction Delay</fullName>
                </value>
                <value>
                    <fullName>Agency - Postal Service (USPS) Holdover</fullName>
                </value>
                <value>
                    <fullName>Agency Post-Occupancy Delay</fullName>
                </value>
                <value>
                    <fullName>Lessor - Administrative</fullName>
                </value>
                <value>
                    <fullName>Lessor - Construction Delay</fullName>
                </value>
                <value>
                    <fullName>Lessor - Document Delays</fullName>
                </value>
                <value>
                    <fullName>Lessor - Extension- Protracted Negotiations</fullName>
                </value>
                <value>
                    <fullName>Lessor - Post-Occupancy Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Lessor - State/City/County or Quasi-Govt Lessor</fullName>
                </value>
                <value>
                    <fullName>Lessor - Succeeding Lease- Protracted Negotiations</fullName>
                </value>
                <value>
                    <fullName>Lessor - Tribal Lease</fullName>
                </value>
                <value>
                    <fullName>PBS - Administrative</fullName>
                </value>
                <value>
                    <fullName>PBS - Construction Delay</fullName>
                </value>
                <value>
                    <fullName>PBS - Post Occupancy Delay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Past_Due_Reason__c</fullName>
        <description>Past Due Reason</description>
        <label>Past Due Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PreCertificationDate__c</fullName>
        <inlineHelpText>Date project receives pre certification by BA53 analyst</inlineHelpText>
        <label>Pre Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessedDateFY__c</fullName>
        <formula>Text(YEAR(ProcessedDate__c + 92 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedDate__c</fullName>
        <inlineHelpText>Date project goes from estimated to actual status</inlineHelpText>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <externalId>true</externalId>
        <label>Project ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <inlineHelpText>Project Type</inlineHelpText>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change in Services</fullName>
                </value>
                <value>
                    <fullName>Change in SF</fullName>
                </value>
                <value>
                    <fullName>Change To External Contacts</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Holdover</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>New/Replacing</fullName>
                </value>
                <value>
                    <fullName>Operating Cost Escalation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Real Estate Tax Escalation</fullName>
                </value>
                <value>
                    <fullName>Reduction</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Step Rent Decrease</fullName>
                </value>
                <value>
                    <fullName>Step Rent Increase</fullName>
                </value>
                <value>
                    <fullName>Succeeding</fullName>
                </value>
                <value>
                    <fullName>Superseding</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospectus_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prospectus Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospectus_Number__c</fullName>
        <label>Prospectus Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Diff_Percent__c</fullName>
        <formula>IF(OldRate__c = 0.00, 1, abs(NewRate__c - OldRate__c)/OldRate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the percentage of change between the old and new project  rates.</inlineHelpText>
        <label>Rate Diff. %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_Diff_Reason__c</fullName>
        <inlineHelpText>Please provide a reason if Rate Diff. &gt;= 30.  Reason for the rate change.  This will remain even if the rates change.</inlineHelpText>
        <label>Rate Diff. Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rate_Diff__c</fullName>
        <formula>ABS(NewRate__c - OldRate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate Diff.</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RealtySpecialist__c</fullName>
        <label>Realty Specialist Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ReasonForProject__c</fullName>
        <label>Reason for Project</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expansion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegionCd__c</fullName>
        <label>Region Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RentEstOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Galaxy Release 1.1</description>
        <label>RentEst Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rent_Difference__c</fullName>
        <formula>AnnualRent__c - Old_Annual_Rent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RexusNewIASqFt__c</fullName>
        <label>Rexus New IA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RexusNewNOASqFt__c</fullName>
        <label>Rexus New NOA Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rexus_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rexus Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rexus_Effective_Date__c</fullName>
        <label>Rexus Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEP_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SEP IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEP_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SEP NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SquareFeet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Sq Ft</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GU</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamCode__c</fullName>
        <label>Team Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_IA_PYC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total IA PYC</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Impact_on_Total_Year_Obligation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Impact on Total Year Obligation</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_NOA_PYC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total NOA PYC</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TriggerUpdateField__c</fullName>
        <description>This is a dummy field that we will use to fire the trigger on this (parent) object when a child (e.g. Project Agency) record is updated.</description>
        <label>Trigger Update Field</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upcoming_Project__c</fullName>
        <formula>IF(

   AND (
        (Text(eEorA__c) == &apos;Estimate&apos;),
        (BDGFlag__c == true),
        (Text(ProjectStatus__c) &lt;&gt; &apos;Cancelled&apos;)
   )

, true, false   

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upcoming Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpdateOldNOAIA__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If box is checked, then update the Old NOA/IA from Calculated Old NOA/IA. If the box is not checked, then do not update the Old NOA/IA from Calculated Old NOA/IA.</description>
        <inlineHelpText>Allows manual redistribution of NOA/IA rentable SF</inlineHelpText>
        <label>Allow REXUS Overwrites on Old NOA/IA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Variance_between_SqFt__c</fullName>
        <formula>(NOASquareFeet__c + IASquareFeet__c)- SquareFeet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Variance between SqFt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_Past_Due__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verified Past Due</description>
        <label>Verified Past Due</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verified_Rate_Diff__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>rate variance is over 30% +/- and has been verified by the BA53 analyst. If the rates verified change this checkmark will be removed.</inlineHelpText>
        <label>Verified Rate Diff.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>aEorA__c</fullName>
        <label>Award Date Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>eEorA__c</fullName>
        <inlineHelpText>Estimated or Actual</inlineHelpText>
        <label>Effective Date Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Actual</fullName>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lease Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NewLease__c</columns>
        <columns>Project_Type__c</columns>
        <columns>RegionCd__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>Old_Annual_Rent__c</columns>
        <columns>AnnualRent__c</columns>
        <columns>TeamCode__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BDGFlag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Projects_not_included_in_budget</fullName>
        <columns>NAME</columns>
        <columns>NewLease__c</columns>
        <columns>Project_Type__c</columns>
        <columns>RegionCd__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OldAnnualRent__c</columns>
        <columns>AnnualRent__c</columns>
        <columns>TeamCode__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BDGFlag__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Projects (not included in budget)</label>
    </listViews>
    <listViews>
        <fullName>My_Region_s_Projects</fullName>
        <columns>NAME</columns>
        <columns>NewLease__c</columns>
        <columns>Project_Type__c</columns>
        <columns>RegionCd__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>Old_Annual_Rent__c</columns>
        <columns>AnnualRent__c</columns>
        <columns>TeamCode__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>BDGFlag__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Region&apos;s Projects</label>
    </listViews>
    <listViews>
        <fullName>My_Region_s_Projects_not_included_in_B</fullName>
        <columns>NAME</columns>
        <columns>NewLease__c</columns>
        <columns>Project_Type__c</columns>
        <columns>RegionCd__c</columns>
        <columns>EffectiveDate__c</columns>
        <columns>OldAnnualRent__c</columns>
        <columns>AnnualRent__c</columns>
        <columns>TeamCode__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <filters>
            <field>BDGFlag__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Region&apos;s Projects (not incl. in Bdgt)</label>
    </listViews>
    <nameField>
        <label>Project Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Projects</pluralLabel>
    <recordTypes>
        <fullName>Placeholder</fullName>
        <active>true</active>
        <description>Galaxy created record</description>
        <label>Placeholder</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rexus</fullName>
        <active>true</active>
        <description>Rexus created record</description>
        <label>Rexus</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Change_of_Project_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED( Name ),  RecordType.DeveloperName =&quot;Rexus&quot;)</errorConditionFormula>
        <errorMessage>Project Number Cannot be Changed. Please save as is.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LP_Process_Date_FY</fullName>
        <active>true</active>
        <description>Process Date cannot be in a prior Fiscal Year</description>
        <errorConditionFormula>TEXT(eEorA__c) == &apos;Estimate&apos;
&amp;&amp;
YEAR(ProcessedDate__c + 92) &lt; YEAR(TODAY() + 92)
&amp;&amp;
!CONTAINS($User.FirstName, &apos;CastIron&apos;)</errorConditionFormula>
        <errorDisplayField>ProcessedDate__c</errorDisplayField>
        <errorMessage>Process Date cannot be in a prior Fiscal Year</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LP_Process_Date_Validation</fullName>
        <active>false</active>
        <description>Process Date cannot be less than the Effective Date</description>
        <errorConditionFormula>TEXT(eEorA__c) == &apos;Estimate&apos;
&amp;&amp;
ProcessedDate__c &lt; EffectiveDate__c</errorConditionFormula>
        <errorDisplayField>ProcessedDate__c</errorDisplayField>
        <errorMessage>Process Date cannot be less than the Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Preval_on_Effective_data_and_amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR( ISCHANGED(EffectiveDate__c),ISCHANGED(  AnnualRent__c )), Preval__c =True, RecordType.DeveloperName =&quot;Rexus&quot;)</errorConditionFormula>
        <errorMessage>Effective Date or New Annual Rent cannot be edited when Preval Flag is set to True. You may not edit this record at this time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Budget_exclude_Comments</fullName>
        <active>true</active>
        <errorConditionFormula>AND( BDGFlag__c =False, ISBLANK(Budget_Exclusion_Reason__c))</errorConditionFormula>
        <errorMessage>Please provide a Reason for Exclusion of this record from the budget.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Rate_Diff_Reason</fullName>
        <active>true</active>
        <description>A rate diff reason must be provided if the Rate Diff % changes</description>
        <errorConditionFormula>AND(
  Verified_Rate_Diff__c  = True, 
  ISBLANK(Rate_Diff_Reason__c)
)</errorConditionFormula>
        <errorMessage>Rate Diff. Reason must be provided when the Verified Rate Diff. field is checked</errorMessage>
    </validationRules>
</CustomObject>